Fix spacing inconsistencies: comedian/special cards

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -77,6 +77,8 @@ h6 {
   --transition-200: all 0.3s ease-in-out;
   --border-radius-100: 0.25rem;
   --border-radius-200: 0.5rem;
+  --content-spacing: 3rem;
+  --header-spacing: 2rem;
 }
 
 body {
