--- a/src/components/ComedianCard/ComedianCard.scss
+++ b/src/components/ComedianCard/ComedianCard.scss
@@ -5,14 +5,19 @@
   justify-content: center;
   align-items: center;
 
+  a {
+    height: 100%;
+  }
+
   &__image {
     width: 100%;
+    height: 100%;
     object-fit: cover;
   }
 
   // missing image placeholder
   &__svg {
-    padding: 1rem;
+    padding: 2rem;
   }
 
   &__details {
