--- a/src/components/SpecialCard/SpecialCard.scss
+++ b/src/components/SpecialCard/SpecialCard.scss
@@ -1,12 +1,17 @@
 .special-card {
   max-width: 300px;
   position: relative;
+  display: grid;
+  grid-template-rows: min-content 1fr;
+
+  a {
+    height: 10rem;
+  }
 
   &__image {
-    height: 10rem;
+    height: 100%;
     width: 100%;
     object-fit: cover;
-    overflow: hidden;
   }
 
   &__year {
@@ -33,9 +38,10 @@
     display: grid;
     grid-template-columns: 1fr max-content;
     align-items: center;
+    gap: 0.5rem;
 
     font-size: 0.9rem;
 
-    padding: 0.35rem 1rem;
+    padding: 0.75rem 1rem;
   }
 }
