--- a/src/components/SpecialsGrid/SpecialsGrid.scss
+++ b/src/components/SpecialsGrid/SpecialsGrid.scss
@@ -1,6 +1,6 @@
 .specials {
   &__header {
-    margin-block: 2rem;
+    margin-bottom: var(--header-spacing);
   }
 
   &__grid {
@@ -8,5 +8,6 @@
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     justify-content: baseline;
     gap: 1rem;
+    margin-bottom: var(--content-spacing);
   }
 }
